sf-hrms/force-app/main/default/objects/Audit_Log__c/fields/Action__c.field-meta.xml
<CustomField><fullName>Action__c</fullName><label>Action</label><type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Create</fullName><default>false</default></value><value><fullName>Update</fullName><default>false</default></value><value><fullName>Delete</fullName><default>false</default></value><value><fullName>Login</fullName><default>false</default></value><value><fullName>Approve</fullName><default>false</default></value><value><fullName>Reject</fullName><default>false</default></value></valueSetDefinition></valueSet></CustomField>