sf-hrms/force-app/main/default/objects/Audit_Log__c/fields/Employee__c.field-meta.xml
<CustomField><fullName>Employee__c</fullName><label>Employee</label><type>Lookup</type><referenceTo>Employee__c</referenceTo><relationshipLabel>Audit Logs</relationshipLabel><relationshipName>Audit_Logs</relationshipName></CustomField>