sf-hrms/force-app/main/default/objects/Audit_Log__c/fields/IP_Address__c.field-meta.xml
<CustomField><fullName>IP_Address__c</fullName><label>IP Address</label><type>Text</type><length>50</length></CustomField>