sf-hrms/force-app/main/default/objects/Audit_Log__c/fields/New_Value__c.field-meta.xml
<CustomField><fullName>New_Value__c</fullName><label>New Value</label><type>LongTextArea</type><length>32768</length><visibleLines>3</visibleLines></CustomField>