sf-hrms/force-app/main/default/objects/Audit_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField><fullName>Object_Name__c</fullName><label>Object Name</label><type>Text</type><length>100</length></CustomField>