sf-hrms/force-app/main/default/objects/Audit_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField><fullName>Record_Id__c</fullName><label>Record Id</label><type>Text</type><length>18</length></CustomField>